Convolution kernel improvements: - add end to end compounding support - add support for fp32 weights with fp16 acts/delta in convolution - make batch sum deterministic - kernel performance tuning

--- a/neon/backends/kernels/sass/hgemm_nn_32x64.sass
+++ b/neon/backends/kernels/sass/hgemm_nn_32x64.sass
@@ -480,8 +480,8 @@ LOOP:
         j0c10  => "--:-:-:-:1      ISETP.GE.AND P1, PT, k, 32, PT;\n" .
                   "--:-:-:-:1      IADD k, k, -32;\n",
 
-        j0c23  => "--:-:-:-:1  \@P1 R2P PR, preds, 0x7c;\n" .
-                  "--:-:-:-:1 \@!P1 R2P PR, RZ,    0x7c;\n",
+        j0c23  => "--:-:-:-:1  \@P1 R2P PR, preds, 0x7c;\n",
+        j0c24  => "--:-:-:-:1 \@!P1 R2P PR, RZ,    0x7c;\n",
 
         j2c32  => "--:-:-:-:1  \@P2 IADD   track0A0.CC, track0A0, 2x<32>;\n",
         j2c37  => "--:-:-:-:1  \@P2 IADD.X track0A1,    track0A1, RZ;\n",
