--- a/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
@@ -91,7 +91,7 @@
     92-99   : out<0-7>
    100-101  : Out<0-1>
    102-103  : Sum<0-1>
-   104-125  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, tidOX63
+   104-125  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, preds, one
 
 </REGISTER_MAPPING>
 
@@ -283,7 +283,7 @@ LOOP:
 --:-:-:-:1      SHL    tidOY,   tidOY, 3;
 01:-:-:-:1      ISCADD k, idx_K, tidOY, 6;
 
-[+ output_setup(63, 1) +]
+[+ output_setup(63, 0, 6) +]
 
 </SCHEDULE_BLOCK>
 
