--- a/neon/backends/kernels/sass/sconv_xprop_X32_N128.sass
+++ b/neon/backends/kernels/sass/sconv_xprop_X32_N128.sass
@@ -77,7 +77,7 @@
     92-99   : out<0-7>
    100-101  : Out<0-1>
    102-103  : Sum<0-1>
-   104-140  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, tidOX2, tidOX63
+   104-140  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, tidOX2, preds, one
 
 </REGISTER_MAPPING>
 
@@ -255,7 +255,7 @@ LOOP:
 --:-:-:-:1      SHL       tidOY, tidOY, 2;
 --:-:-:-:1      ISCADD k, idx_K, tidOY, 5;
 
-[+ output_setup(63, 1) +]
+[+ output_setup(63, 1, 6) +]
 
 </SCHEDULE_BLOCK>
 
