--- a/neon/backends/kernels/sass/xconv_winograd_3x3_4x4_32x32.sass
+++ b/neon/backends/kernels/sass/xconv_winograd_3x3_4x4_32x32.sass
@@ -28,11 +28,11 @@ sub output_op   { return $determ ? 'STG.E.CG' : 'RED.E.ADD.F32.FTZ.RN'; }
 
 <CONSTANT_MAPPING>
 
-    addr_zero   : 4x<32*36*2*4>
-    addr_rYXN   : 4x<32*36*2*4 + 4>
-    addr_iYXN   : 4x<32*36*2*4 + 5>
-    addr_idx_K  : 4x<32*36*2*4 + 6>
-    addr_idx_C  : 4x<32*36*2*4 + 7>
+    addr_zero   : 4x<32*36*2*4 + 64 + 0>
+    addr_rYXN   : 4x<32*36*2*4 + 64 + 4>
+    addr_iYXN   : 4x<32*36*2*4 + 64 + 5>
+    addr_idx_K  : 4x<32*36*2*4 + 64 + 6>
+    addr_idx_C  : 4x<32*36*2*4 + 64 + 7>
 
     param_F[0]         : c[0x0][0x140]
     param_F[1]         : c[0x0][0x144]
@@ -111,7 +111,7 @@ sub output_op   { return $determ ? 'STG.E.CG' : 'RED.E.ADD.F32.FTZ.RN'; }
       92-95 ~ reduce_YXN, swapBuf, readFs, readIs
 
 
-      64-89 ~ tid_128, tid_32, tid_31, tid_16, Tid_1, idxC, idxK, idxI, readFs2, readIs2, offsetF, k, CRSK, xmad_determ
+      64-89 ~ tid_128, tid_64, tid_32, tid_31, tid_16, Tid_1, idxC, idxK, idxI, readFs2, readIs2, offsetF, k, CRSK, xmad_determ
       86-89 : Out1<0-1>, Out2<0-1>
       90-91 : Out0<0-1>
       92-95 ~ alpha, writeCs, readCs, c
@@ -665,16 +665,18 @@ LOAD_LOOP:
 01:-:-:-:1      LOP.AND  Tid32_2,  Tid,    -32;
 --:-:-:-:1      SHR.U32  Tid32_2,  Tid32_2, 2;
 
-// readFs = ((tid & -32) >> 2) | ((tid >> 1) & 7)
---:-:-:-:1      BFE.U32 readFs, Tid,    0x301; // 3 bits at position 1
---:-:-:-:1      LOP.OR  readFs, readFs, Tid32_2;
---:-:-:-:1      SHL     readFs, readFs, 4;
-
 // readIs = ((tid & 16) >> 3) | (tid & 1)
 --:-:-:-:1      LOP.AND Tid1,   Tid,    1;
---:-:-:-:1      LOP.AND readIs, Tid,    16;
+01:-:-:-:1      LOP.AND readIs, Tid,    16;
 --:-:-:-:1      SHR.U32 readIs, readIs, 3;
 --:-:-:-:1      IADD    readIs, readIs, Tid1;
+
+// readFs = ((tid & -32) >> 2) | ((tid >> 1) & 7) | (readIs << 2)
+--:-:-:-:1      BFE.U32 readFs, Tid,    0x301; // 3 bits at position 1
+--:-:-:-:1      LOP.OR  readFs, readFs, Tid32_2;
+--:-:-:-:1      ISCADD  readFs, readIs, readFs, 2;
+
+--:-:-:-:1      SHL     readFs, readFs, 4;
 --:-:-:-:1      SHL     readIs, readIs, 3;
 
 // writeCs = readIs * 32*36 + readFs;
@@ -745,19 +747,20 @@ COMPUTE_FINISH:
 
 --:-:-:-:1      ISETP.GE.AND P4, PT, tid_128, 256, PT;
 
-
-// readFs = ((tid & -16) >> 1) | ((tid >> 1) & 3)
---:-:-:-:1      LOP.AND  tid_16,   tid_128, -16;
---:-:-:-:1      SHR.U32  tid_16,   tid_16,   1;
---:-:-:-:1      BFE.U32  readFs2,  tid_128,  0x201; // 2 bits at position 1
---:-:-:-:1      LOP.OR   readFs2,  readFs2,  tid_16;
---:-:-:-:1      ISCADD   readFs2,  readFs2,  4x<32*4>, 4;
-
 // readIs = ((tid &  8) >> 2) | (tid & 1)
 --:-:-:-:1      LOP.AND  Tid_1,   tid_128, 1;
 --:-:-:-:1      LOP.AND  readIs2, tid_128, 8;
 --:-:-:-:1      SHR.U32  readIs2, readIs2, 2;
 --:-:-:-:1      IADD     readIs2, readIs2, Tid_1;
+
+// readFs = ((tid & -16) >> 1) | ((tid >> 1) & 3) | (readIs2 << 2)
+--:-:-:-:1      LOP.AND  tid_16,   tid_128, -16;
+--:-:-:-:1      SHR.U32  tid_16,   tid_16,   1;
+--:-:-:-:1      BFE.U32  readFs2,  tid_128,  0x201; // 2 bits at position 1
+--:-:-:-:1      LOP.OR   readFs2,  readFs2,  tid_16;
+--:-:-:-:1      ISCADD   readFs2,  readIs2, readFs2, 2;
+
+--:-:-:-:1      ISCADD   readFs2, readFs2,  4x<32*4>, 4;
 --:-:-:-:1      SHL      readIs2, readIs2, 3;
 
 // writeCs = readFs * 32*36 + readIs;
@@ -774,14 +777,16 @@ COMPUTE_FINISH:
 
 --:-:-:-:1      LOP.AND tid_31, tid_128, 31;
 --:-:-:-:1      SHR.U32 tid_32, tid_128,  5;
+--:-:-:-:1      SHR.U32 tid_64, tid_128,  6;
 
-// readCs = tid>>5 * 32*36 + tid & 31
---:-:-:-:1      XMAD readCs, tid_32, 1x<32*36>, tid_31;
---:-:-:-:1      SHL  readCs, readCs, 2;
+// readCs = tid_32 * 32*36 + tid_31 + tid_64 * 16
+--:-:-:-:1      XMAD   readCs, tid_32, 1x<32*36>, tid_31;
+--:-:-:-:1      ISCADD readCs, tid_64, readCs, 4;
+--:-:-:-:1      SHL    readCs, readCs, 2;
 
 // k = K_blk*32 + tid_31
 // c = C_blk*32 + tid_32<<1
---:-:-:-:1      SHL tid_32, tid_32,   1;
+--:-:-:-:1      SHL tid_32, tid_32, 1;
 01:-:-:-:1      ISCADD  k, idxK, tid_31, 5;
 02:-:-:-:1      ISCADD  c, idxC, tid_32, 5;
 
